Bug 355084 - key:// link not working in verify result html
Summary: key:// link not working in verify result html
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.0
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-09 14:23 UTC by Emanuel Schütze
Modified: 2016-07-14 15:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emanuel Schütze 2015-11-09 14:23:34 UTC
Link should open key detail dialog or key lookup on key server if not imported.

Moved from https://roundup.kolab.org/issue4158

Reproducible: Always
Comment 1 Emanuel Schütze 2015-11-09 14:24:13 UTC
tested with gpg4win 2.2.6
Comment 2 Andre Heinecke 2016-05-23 16:02:05 UTC
Git commit a0c04348d7d2067fef3f635f17612c56e2a951fe by Andre Heinecke.
Committed on 23/05/2016 at 16:00.
Pushed by aheinecke into branch 'master'.

Fix key links in results

This handles the keyLink directly in the resultitemwidget and
fixes the behavior, by matching the expected format with the
actual keylink format.

M  +14   -5    src/crypto/gui/resultitemwidget.cpp

http://commits.kde.org/kleopatra/a0c04348d7d2067fef3f635f17612c56e2a951fe
Comment 3 Andre Heinecke 2016-07-14 15:21:01 UTC
Git commit cc2804f52fb544d695de81c6d19a10368250a2fd by Andre Heinecke.
Committed on 06/07/2016 at 10:03.
Pushed by aheinecke into branch 'sigencfiles-3'.

Fix key links in results

This handles the keyLink directly in the resultitemwidget and
fixes the behavior, by matching the expected format with the
actual keylink format.

M  +14   -5    src/crypto/gui/resultitemwidget.cpp

http://commits.kde.org/kleopatra/cc2804f52fb544d695de81c6d19a10368250a2fd