Fix key links in results

This handles the keyLink directly in the resultitemwidget and
fixes the behavior, by matching the expected format with the
actual keylink format.

BUG: 355084